# K-Lane

./: .gitignore  README.md  main_vis.py  readme.md  requirements.txt  train_gpu_0.py  validate_gpu_0.py
annotation/src/gui_qt/: mainframe.py  mainframe.ui  utils.py
annotation/src/lidar_msgs/: CMakeLists.txt  package.xml
annotation/src/lidar_msgs/msg/: Params.msg  PillarTensorTraining.msg
annotation/src/pc_pre_processor/: CMakeLists.txt  package.xml
annotation/src/pc_pre_processor/src/: pc_pre_processor.cpp  pc_pre_processor.h
baseline/datasets/: __init__.py  avelane_vis.py  klane.py  registry.py
baseline/engine/: optimizer.py  runner.py  scheduler.py
baseline/models/: __init__.py  registry.py
baseline/models/backbone/: __init__.py  cvitsegnet.py  dummy.py  mixsegnet.py  resnet_fpn.py  vgg_fpn.py  vitsegnet.py
baseline/models/heads/: LightRowTransformer.py  __init__.py  grid_seg.py  row_shared_not_reduc_ref.py
baseline/models/net/: detector.py
baseline/models/pcencoder/: __init__.py  pointpillars.py  projector.py  projector_dense.py
baseline/utils/: config.py  metric_utils.py  net_utils.py  pc_utils.py  pc_utils_no_o3d.py  registry.py  vis_utils.py
baseline/vis/: mainframe.py  mainframe.ui
configs/: Proj28_GFC-T3_RowRef_82_73.py  Proj28_GFC-T3_Seg_82_11.py  config_vis.py  rocky_model.py
docs/: KLane.md  annotation.md  visualization.md
logs/2025-04-21-00-26-12/: configs_Proj28_GFC-T3_RowRef_82_73.txt  train.txt  val.txt
